[project]
name = "basic-bandit"
version = "0.1.0"
description = "Implementation of multi-armed bandit algorithms including epsilon-greedy, softmax, UCB, and Thompson sampling"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "prettytable>=3.0.0",
    "tqdm>=4.65.0",
]

[project.scripts]
bandit = "bandit:main"

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
